--- a/EECIP/Views/Account/Login.cshtml
+++ b/EECIP/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
-@using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "panel-body wrapper-lg", @id= "norepostform" }))
+@using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "panel-body wrapper-lg", @id = "norepostform" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
@@ -20,18 +20,23 @@
     </div>
     <div class="form-group">
         <label class="control-label">Password</label>
+        @Html.ActionLink("Forgot Password?", "ResetPassword", new object { }, new { @class = "pull-right m-t-xs", @style= "padding-top: 6px;" })
+
         @Html.TextBoxFor(m => m.Password, new { @class = "form-control input-lg ", @type = "password", @placeholder = "" })
         @Html.ValidationMessageFor(m => m.Password)
     </div>
-    <div class="checkbox">
-        <label>
-            @Html.CheckBoxFor(m => m.RememberMe) Remember me
+
+    <div class="form-actions">
+        <label for="remember" class="checkbox-inline hover">
+            @Html.CheckBoxFor(m => m.RememberMe) Keep me signed in
         </label>
+        <button type="submit" class="btn btn-primary pull-right">Login <i class="clip-arrow-right"></i></button>
     </div>
-    <button type="submit" class="btn btn-primary">Sign in</button>
-    @Html.ActionLink("Forgot Password?", "ResetPassword", new object { }, new { @class = "pull-right m-t-xs" })
+
     <div class="line line-dashed"></div>
-    <p class="text-muted text-center"><small>Do not have an account?</small></p>
-    <a href="@Url.Action("Register", "Account") " class="btn btn-primary btn-block">Create an account</a>
+    <div class="new-account">
+        Don't have an account yet?
+        <a href="@Url.Action("Register", "Account")" class="register">Create an account</a>
+    </div>
 }
 
