--- a/EECIP/Views/Shared/_LayoutLogin.cshtml
+++ b/EECIP/Views/Shared/_LayoutLogin.cshtml
@@ -19,18 +19,22 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'UA-108934202-1');
     </script>
 
 </head>
 <body class="login example1"  >
     <div class="main-login col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
-        <div class="logo">EECIP</div>
+        <div class="logo">e-Enterprise Community Inventory Platform</div>
         <div class="box-login" style="display: block;">
             <section class="panel panel-default bg-white m-t-lg">
                 <header class="panel-heading text-center">
                     <strong>@ViewBag.Title</strong>
+                    <div class="panel-tools">
+                        <a class="btn btn-xs btn-link" href="@Url.Action("Index", "Home")">
+                            <i class="clip-close"></i>
+                        </a>
+                    </div>
                 </header>
                 @RenderBody()
             </section>
